# rpn-calculator

./: .dockerignore  CMakeLists.txt  Dockerfile  Doxyfile
.github/workflows/: ci.yml
html/: globals.html  globals_func.html  rpn_8cpp.html  rpn_8cpp__incl.map  rpn_8cpp__incl.md5  rpn_8h_source.html
html/search/: searchdata.js
include/: rpn.h
latex/: rpn_8cpp.tex  rpn_8cpp__incl.md5  rpn_8h_source.tex
src/: main.cpp  rpn.cpp
tests/: CMakeLists.txt  test_rpn.cpp
